<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="edu.unc.chongrui.assignment1.MainActivity"
    tools:showIn="@layout/activity_main" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/heading"
        android:id="@+id/heading" />
    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="false"
        android:layout_alignParentStart="false"
        android:id="@+id/chessboard"
        android:paddingTop="30dp" >
        <!-- add padding to GridLayout to avoid covering heading -->
    </GridLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/note1"
        android:id="@+id/note1"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="90dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/note2"
        android:id="@+id/note2"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="70dp"/>

    <Button
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:text="@string/btn_giveup_label"
        android:id="@+id/btn_giveup"
        android:onClick="onClickGiveUp"
        android:layout_alignParentBottom="true" />

    <Button
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:id="@+id/btn_reset"
        android:onClick="onClickReset"
        android:text="@string/btn_reset_label"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>
